style: Fix the vertical alignment in message controls.
This commit adds vertical-align: middle to .message_failed in zulip.css
which was necessary as the alignment of .message_failed wasn't matching
with rest of the message controls like .edit_content. This makes the
look of the message controls better that they don't look shifted.

Follow up #17666

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -852,6 +852,7 @@ td.pointer {
         font-weight: bold;
         color: hsl(0, 100%, 50%);
         position: relative;
+        vertical-align: middle;
 
         .rotating {
             display: inline-block;
